RESOLVED FIXED59746
WebKit2: Frequent crashes in acceptsFirstMouse
https://bugs.webkit.org/show_bug.cgi?id=59746
Summary WebKit2: Frequent crashes in acceptsFirstMouse
Alexey Proskuryakov
Reported 2011-04-28 15:17:33 PDT
We are making sync calls without checking that connection is valid.
Attachments
proposed fix (9.52 KB, patch)
2011-04-28 15:27 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2011-04-28 15:22:53 PDT
Alexey Proskuryakov
Comment 2 2011-04-28 15:27:05 PDT
Created attachment 91569 [details] proposed fix
Anders Carlsson
Comment 3 2011-04-28 15:53:41 PDT
Comment on attachment 91569 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=91569&action=review > Source/WebKit2/UIProcess/mac/WebPageProxyMac.mm:186 > + location = 0; > + length = 0; > + return; Shouldn't location be NSNotFound here? > Source/WebKit2/UIProcess/mac/WebPageProxyMac.mm:194 > + location = 0; Ditto
Alexey Proskuryakov
Comment 4 2011-04-28 16:02:15 PDT
Maybe, not sure. Changed to NSNotFound. Committed <http://trac.webkit.org/changeset/85252>.
Note You need to log in before you can comment on or make changes to this bug.